--- a/pom.xml
+++ b/pom.xml
@@ -428,12 +428,22 @@
 		<dependency>
 			<groupId>org.jclouds</groupId>
 			<artifactId>jclouds-allcompute</artifactId>
-			<version>1.5.1</version>
+			<version>1.5.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jclouds.driver</groupId>
 			<artifactId>jclouds-jsch</artifactId>
-			<version>1.5.1</version>
+			<version>1.5.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jclouds.driver</groupId>
+			<artifactId>jclouds-gae</artifactId>
+			<version>1.5.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>3.0-rc3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
